--- a/templates/letter.html
+++ b/templates/letter.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href = "../static/css/jquery-sakura.css">
+    <link rel="stylesheet" type="text/css" href = "../static/css/letter.css">
+    
+    <title>Happy Birth Day!</title>
+    
 </head>
 <body>
+    <header class = "header">
+        <img class="header-picture" src="../static/cake.png"/>
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">
+                    <h3>Home</h3>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/letter">
+                    <h3>Letter</h3>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href = "/about">
+                    <h3>About</h3>
+                </a>
+              </li>
+            </ul>
+          </nav>
+    </header>
+
+    <div class="desc">
+        <div class="mypost">
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="name" placeholder="url">
+                <label for="floatingInput">이름을 입력해주세요.</label>
+            </div>
+            <div class="form-floating">
+                        <textarea class="form-control" placeholder="Leave a comment here" id="comment"
+                                  style="height: 100px"></textarea>
+                <label for="floatingTextarea2">축하 메세지를 입력해주세요.</label>
+            </div>
+            <button onclick="save_comment()" type="button" class="btn btn-dark">메세지 남기기</button>
+        </div>
     
+        <div class="mycards" id="comment-list">
+        </div>
+    </div>
+    
+
+
+    <script src = "../static/js/jquery-sakura.js"></script>
+    <script src = "../static/js/letter.js"></script>
 </body>
 </html>
